--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,4 @@ configs/emacs.d/*
 # Keep important scripts
 !configs/emacs.d/init.el
 !configs/emacs.d/custom.el
-!configs/emacs.d/layers
+!configs/emacs.d/configs
