--- a/configs/i3/config
+++ b/configs/i3/config
@@ -136,6 +136,19 @@ mode "$mode_system" {
     bindsym Escape mode "default"
 }
 bindsym $mod+w mode "$mode_system"
+
+set $mode_volume Volume (k) Increase, (j) Decrease, (m) Mute
+mode "$mode_volume" {
+    bindsym k exec --no-startup-id pactl set-sink-volume alsa_output.pci-0000_00_1b.0.analog-stereo +10%
+    bindsym j exec --no-startup-id pactl set-sink-volume alsa_output.pci-0000_00_1b.0.analog-stereo -10%
+    bindsym m exec --no-startup-id pactl set-sink-mute alsa_output.pci-0000_00_1b.0.analog-stereo toggle
+
+    # back to normal: Enter or Escape
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
+bindsym $mod+m mode "$mode_volume"
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
