--- a/configs/i3/config
+++ b/configs/i3/config
@@ -9,6 +9,7 @@
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
+set $i3_path ~/.config/i3
 set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
@@ -68,7 +69,6 @@ bindsym $mod+Shift+space floating toggle
 
 # change focus between tiling / floating windows
 bindsym $mod+space focus mode_toggle
-
 # focus the parent container
 bindsym $mod+a focus parent
 
@@ -137,11 +137,13 @@ mode "$mode_system" {
 }
 bindsym $mod+w mode "$mode_system"
 
-set $mode_volume Volume (k) Increase, (j) Decrease, (m) Mute
+set $mode_volume Volume (k) Increase, (j) Decrease, (t) Toggle Mute, (m) Mute
 mode "$mode_volume" {
-    bindsym k exec --no-startup-id pactl set-sink-volume alsa_output.pci-0000_00_1b.0.analog-stereo +10%
-    bindsym j exec --no-startup-id pactl set-sink-volume alsa_output.pci-0000_00_1b.0.analog-stereo -10%
-    bindsym m exec --no-startup-id pactl set-sink-mute alsa_output.pci-0000_00_1b.0.analog-stereo toggle
+    bindsym k exec --no-startup-id $i3_path/i3volume increase
+    bindsym j exec --no-startup-id $i3_path/i3volume decrease
+    bindsym m exec --no-startup-id $i3_path/i3volume mute
+    bindsym t exec --no-startup-id $i3_path/i3volume toggle
+	bindsym w exec pwd > $i3_path/file.out
 
     # back to normal: Enter or Escape
     bindsym Return mode "default"
