--- a/configs/i3/config
+++ b/configs/i3/config
@@ -137,11 +137,12 @@ mode "$mode_system" {
 }
 bindsym $mod+w mode "$mode_system"
 
-set $mode_volume Volume (k) Increase, (j) Decrease, (t) Toggle Mute, (m) Mute
+set $mode_volume Volume (l) Increase, (h) Decrease, (j) Mute off, (k) Mute on, (t) Toggle Mute
 mode "$mode_volume" {
-    bindsym k exec --no-startup-id $i3_path/i3volume increase
-    bindsym j exec --no-startup-id $i3_path/i3volume decrease
-    bindsym m exec --no-startup-id $i3_path/i3volume mute
+    bindsym l exec --no-startup-id $i3_path/i3volume increase
+    bindsym h exec --no-startup-id $i3_path/i3volume decrease
+    bindsym j exec --no-startup-id $i3_path/i3volume mute
+    bindsym k exec --no-startup-id $i3_path/i3volume nomute
     bindsym t exec --no-startup-id $i3_path/i3volume toggle
 	bindsym w exec pwd > $i3_path/file.out
 
