--- a/configs/i3/config
+++ b/configs/i3/config
@@ -152,6 +152,21 @@ mode "$mode_volume" {
 }
 bindsym $mod+m mode "$mode_volume"
 
+set $mode_brightness Brightness (l) Increase, (h) Decrease, (j) Min Bright, (k) Max Bright
+mode "$mode_brightness" {
+    bindsym l exec --no-startup-id $i3_path/i3brightness increase
+    bindsym h exec --no-startup-id $i3_path/i3brightness decrease
+    bindsym j exec --no-startup-id $i3_path/i3brightness min
+    bindsym k exec --no-startup-id $i3_path/i3brightness max
+    bindsym Shift+g exec --no-startup-id $i3_path/i3brightness none
+	bindsym w exec pwd > $i3_path/file.out
+
+    # back to normal: Enter or Escape
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
+bindsym $mod+b mode "$mode_brightness"
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
