--- a/configs/i3/config
+++ b/configs/i3/config
@@ -129,7 +129,7 @@ mode "$mode_system" {
     bindsym s exec --no-startup-id $i3_path/i3exit suspend, mode "default"
     bindsym h exec --no-startup-id $i3_path/i3exit hibernate, mode "default"
     bindsym r exec --no-startup-id $i3_path/i3exit reboot, mode "default"
-    bindsym Shift+s exec --no-startup-id i3exit shutdown, mode "default"
+    bindsym Shift+s exec --no-startup-id $i3_path/i3exit shutdown, mode "default"
 
     # back to normal: Enter or Escape
     bindsym Return mode "default"
