--- a/configs/i3/config
+++ b/configs/i3/config
@@ -171,6 +171,21 @@ mode "$mode_brightness" {
 }
 bindsym $mod+b mode "$mode_brightness"
 
+# HDMI menu
+set $mode_hdmi HDMI Connect (h) Left, (j) Below, (k) Above, (l) Right, (;) Disconnect
+mode "$mode_hdmi" {
+	bindsym h exec --no-startup-id xrandr --output HDMI1 --left eDP1 --auto; mode"default"
+	bindsym j exec --no-startup-id xrandr --output HDMI1 --below eDP1 --auto; mode"default"
+	bindsym k exec --no-startup-id xrandr --output HDMI1 --above eDP1 --auto; mode"default"
+	bindsym l exec --no-startup-id xrandr --output HDMI1 --right eDP1 --auto; mode"default"
+	bindsym semicolon exec --no-startup-id xrandr --output HDMI-1 --off; mode"default"
+
+    # back to normal: Enter or Escape
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
+bindsym $mod+c mode "$mode_hdmi"
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
