--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 
-
+# Emacs ignores
 # Ignore Emacs saves
 \#*#
 
@@ -10,3 +10,10 @@ configs/emacs.d/*
 # Keep important scripts
 !configs/emacs.d/init.el
 !configs/emacs.d/configs
+
+
+# SSH ignores
+configs/ssh/*
+
+# Keep SSH config
+!configs/ssh/config
