--- a/configs/i3/config
+++ b/configs/i3/config
@@ -183,6 +183,7 @@ mode "$mode_hdmi" {
 	bindsym k exec --no-startup-id xrandr --output HDMI1 --above eDP1 --auto; mode"default"
 	bindsym h exec --no-startup-id xrandr --output HDMI1 --left-of eDP1 --auto; mode"default"
 	bindsym l exec --no-startup-id xrandr --output HDMI1 --right-of eDP1 --auto; mode"default"
+	bindsym m exec --no-startup-id xrandr --output HDMI1 --same-as eDP1 --auto; mode"default"
 	bindsym semicolon exec --no-startup-id xrandr --output HDMI-1 --off; mode"default"
 
     # back to normal: Enter or Escape
