--- a/configs/termite/config
+++ b/configs/termite/config
@@ -12,7 +12,7 @@ foreground          = #93a1a1
 foreground_bold     = #eee8d5
 cursor              = #eee8d5
 cursor_foreground   = #002b36
-background          = rgba(0, 43, 54)
+background          = rgba(0, 43, 54, 1.0)
 
 # 16 color space
 
