--- a/configs/i3/config
+++ b/configs/i3/config
@@ -192,6 +192,22 @@ mode "$mode_hdmi" {
 }
 bindsym $mod+c mode "$mode_hdmi"
 
+
+# Mouse menu
+set $mode_mouse Mouse (h) Disable, (l) Enable
+mode "$mode_mouse" {
+	bindsym h exec --no-startup-id $i3_path/i3mouse disable; mode "default"
+	bindsym l exec --no-startup-id $i3_path/i3mouse enable; mode "default"
+
+    # back to normal: Enter or Escape
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
+bindsym $mod+Shift+m mode "$mode_mouse"
+
+# Disable mouse by default
+exec --no-startup-id $i3_path/i3mouse disable
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
