--- a/configs/i3/config
+++ b/configs/i3/config
@@ -207,6 +207,8 @@ bindsym $mod+Shift+m mode "$mode_mouse"
 
 # Disable mouse by default
 exec --no-startup-id $i3_path/i3mouse disable
+# Disable mouse warping for multiple monitor use
+mouse_warping none
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
