--- a/configs/i3/config
+++ b/configs/i3/config
@@ -113,7 +113,8 @@ bindsym $mod+Shift+r restart
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
 # resize window (you can also use the mouse for that)
-mode "resize" {
+set $mode_resize Resize (g) grow width (s) shrink width (e) grow height (c) shrink height
+mode "$mode_resize" {
         # These bindings trigger as soon as you enter the resize mode
 
         bindsym g resize grow width 3 px or 3 ppt
@@ -125,7 +126,7 @@ mode "resize" {
         bindsym Return mode "default"
         bindsym Escape mode "default"
 }
-bindsym $mod+r mode "resize"
+bindsym $mod+r mode "$mode_resize"
 
 # Shutdown menu
 set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (Shift+s) shutdown
