--- a/configs/i3/config
+++ b/configs/i3/config
@@ -50,6 +50,13 @@ bindsym $mod+Shift+j move down
 bindsym $mod+Shift+k move up
 bindsym $mod+Shift+l move right
 
+# move focused workspace
+bindsym $mod+Left workspace to output left
+bindsym $mod+Down workspace to output down
+bindsym $mod+Up workspace to output up
+bindsym $mod+Right workspace to output right
+
+
 # split in horizontal orientation
 bindsym $mod+semicolon split h
 
