--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,10 @@ configs/emacs.d/*
 !configs/emacs.d/init.org
 !configs/emacs.d/start.el
 !configs/emacs.d/snippets
-!configs/emacs.d/core/*
-!configs/emacs.d/funcs/*
-!configs/emacs.d/modes/*
-!configs/emacs.d/packages/*
+!configs/emacs.d/core/
+!configs/emacs.d/funcs/
+!configs/emacs.d/modes/
+!configs/emacs.d/packages/
 
 
 # SSH ignores
