--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ configs/emacs.d/*
 !configs/emacs.d/start.el
 !configs/emacs.d/snippets
 !configs/emacs.d/core/
+!configs/emacs.d/keys/
 !configs/emacs.d/modules/
 !configs/emacs.d/funcs/
 !configs/emacs.d/modes/
