--- a/configs/i3/config
+++ b/configs/i3/config
@@ -226,7 +226,6 @@ mode "$mode_music" {
 }
 bindsym $mod+y mode "$mode_music"
 
-
 # Mouse menu
 set $mode_mouse Mouse (h) Disable, (l) Enable
 mode "$mode_mouse" {
@@ -238,6 +237,19 @@ mode "$mode_mouse" {
     bindsym Escape mode "default"
 }
 bindsym $mod+Shift+m mode "$mode_mouse"
+
+# Launch menu
+set $mode_launch Launch (e) Emacs, (f) Firefox, (t) Thunar
+mode "$mode_launch" {
+	bindsym e exec --no-startup-id emacs; mode "default"
+	bindsym f exec --no-startup-id firefox; mode "default"
+	bindsym b exec --no-startup-id thunar; mode "default"
+
+    # back to normal: Enter or Escape
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
+bindsym $mod+g mode "$mode_launch"
 
 # Disable mouse by default
 exec --no-startup-id $i3_path/i3mouse disable
