Refactored setup out of emacs install script to its own script

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ configs/emacs.d/*
 *.elc
 
 # Keep important scripts
+!configs/emacs.d/install.sh
+!configs/emacs.d/setup.sh
 !configs/emacs.d/init.org
 !configs/emacs.d/start.el
 !configs/emacs.d/snippets
