--- a/configs/i3/config
+++ b/configs/i3/config
@@ -72,10 +72,10 @@ bindsym $mod+t layout tabbed
 bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
-bindsym $mod+Shift+space floating toggle
+bindsym $mod+Shift+p floating toggle
 
 # change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
+bindsym $mod+p focus mode_toggle
 # focus the parent container
 bindsym $mod+a focus parent
 bindsym $mod+u focus parent
