--- a/configs/picom/picom.conf
+++ b/configs/picom/picom.conf
@@ -151,8 +151,10 @@ focus-exclude = [ "class_g = 'Cairo-clock'","class_g = 'firefox'" ];
 # example:
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
-opacity-rule = []
-
+opacity-rule = [
+	"100:class_g = 'Vncviewer'",
+	"0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
+];
 
 #################################
 #     Background-Blurring       #
