--- a/configs/alacritty/alacritty.yml
+++ b/configs/alacritty/alacritty.yml
@@ -663,12 +663,16 @@ key_bindings:
   - { key: C,      mods: Control,       mode: Vi, action: ToggleViMode            }
   - { key: Y,      mods: Control,       mode: Vi, action: ScrollLineUp            }
   - { key: E,      mods: Control,       mode: Vi, action: ScrollLineDown          }
+  - { key: K,      mods: Shift,         mode: Vi, action: ScrollLineUp            }
+  - { key: J,      mods: Shift,         mode: Vi, action: ScrollLineDown          }
   - { key: G,                           mode: Vi, action: ScrollToTop             }
   - { key: G,      mods: Shift,         mode: Vi, action: ScrollToBottom          }
   - { key: B,      mods: Control,       mode: Vi, action: ScrollPageUp            }
   - { key: F,      mods: Control,       mode: Vi, action: ScrollPageDown          }
   - { key: U,      mods: Control,       mode: Vi, action: ScrollHalfPageUp        }
   - { key: D,      mods: Control,       mode: Vi, action: ScrollHalfPageDown      }
+  - { key: K,      mods: Alt,           mode: Vi, action: ScrollHalfPageUp        }
+  - { key: J,      mods: Alt,           mode: Vi, action: ScrollHalfPageDown      }
   - { key: Y,                           mode: Vi, action: Copy                    }
   - { key: Y,                           mode: Vi, action: ClearSelection          }
   - { key: Copy,                        mode: Vi, action: ClearSelection          }
