Updated the config file

--- a/configs/picom/picom.conf
+++ b/configs/picom/picom.conf
@@ -221,6 +221,9 @@ blur-background-exclude = [
 #       General Settings        #
 #################################
 
+# Enable remote control via D-Bus. See the man page for more details.
+# dbus = true
+
 # Daemonize process. Fork to background after initialization. Causes issues with certain (badly-written) drivers.
 # daemon = false
 
@@ -434,7 +437,7 @@ log-level = "warn";
 wintypes:
 {
   tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
-  dock = { shadow = false; }
+  dock = { shadow = false; clip-shadow-above = true; }
   dnd = { shadow = false; }
   popup_menu = { opacity = 0.8; }
   dropdown_menu = { opacity = 0.9; }
