--- a/configs/picom/picom.conf
+++ b/configs/picom/picom.conf
@@ -139,7 +139,7 @@ active-opacity=0.96
 
 # Specify a list of conditions of windows that should always be considered focused.
 # focus-exclude = []
-focus-exclude = [ "class_g = 'Cairo-clock'","class_g = 'firefox'" ];
+focus-exclude = [ "class_g = 'Cairo-clock'", "class_g = 'firefox'" ];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
 # inactive-dim-fixed = 1.0
@@ -152,6 +152,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'","class_g = 'firefox'" ];
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
 opacity-rule = [
+	"90:class_g = 'emacs'",
 	"100:class_g = 'Vncviewer'",
 	"0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
 ];
@@ -187,7 +188,7 @@ rounded-corners-exclude = [
 # Bad in performance, with driver-dependent behavior. 
 # The name of the switch may change without prior notifications.
 #
-# blur-background = false
+blur-background = false
 
 # Blur background of windows when the window frame is not opaque. 
 # Implies:
@@ -230,8 +231,8 @@ blur-background-exclude = [
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-backend = "glx";
-# backend = "xrender";
+# backend = "glx";
+backend = "xrender";
 
 # Enable/disable VSync.
 # vsync = false
