--- a/configs/picom/picom.conf
+++ b/configs/picom/picom.conf
@@ -12,7 +12,7 @@ shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 7;
+shadow-radius = 12;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
 # shadow-opacity = .75
@@ -66,6 +66,7 @@ shadow-exclude = [
   "class_g = 'Conky'",
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
+  "name = 'hacksaw'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
@@ -179,7 +180,7 @@ rounded-corners-exclude = [
 
 
 # Parameters for background blurring, see the *BLUR* section for more information.
-# blur-method = 
+blur-method =  "dual_kawase"
 # blur-size = 12
 #
 # blur-deviation = false
@@ -188,7 +189,10 @@ rounded-corners-exclude = [
 # Bad in performance, with driver-dependent behavior. 
 # The name of the switch may change without prior notifications.
 #
-blur-background = false
+# blur-background = false
+blur-background = true
+
+blur-strength = 5
 
 # Blur background of windows when the window frame is not opaque. 
 # Implies:
@@ -231,8 +235,8 @@ blur-background-exclude = [
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-# backend = "glx";
-backend = "xrender";
+backend = "glx";
+# backend = "xrender";
 
 # Enable/disable VSync.
 # vsync = false
