Added emacs to opacity rule

--- a/configs/picom/picom.conf
+++ b/configs/picom/picom.conf
@@ -153,6 +153,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'","class_g = 'firefox'" ];
 #
 opacity-rule = [
 	"100:class_g = 'Vncviewer'",
+	"100:class_g = 'emacs'",
 	"0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
 ];
 
