Add clip command

--- a/configs/touchegg/touchegg.conf
+++ b/configs/touchegg/touchegg.conf
@@ -90,6 +90,14 @@
         </action>
       </gesture>
 
+	<gesture type="SWIPE" fingers="4" direction="RIGHT">
+        <action type="RUN_COMMAND">
+          <repeat>false</repeat>
+          <command>sleep 0.1 && ~/.dotfiles/configs/i3/i3clip</command>
+          <on>begin</on>
+        </action>
+      </gesture>
+
     <gesture type="SWIPE" fingers="3" direction="RIGHT">
       <action type="CHANGE_DESKTOP">
         <direction>previous</direction>
