Update default shell

--- a/configs/alacritty/alacritty.yml
+++ b/configs/alacritty/alacritty.yml
@@ -373,7 +373,7 @@ cursor:
 #   - (Linux/BSD) user login shell
 #   - (Windows) powershell
 shell:
- program: /bin/fish
+ program: /usr/bin/nu
 #  args:
 #    - --login
 
